# PixoBook

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
.opencode/plans/: 2026-06-13-ui-optimization-phase2.md
ci/: scan-bug-patterns.ps1
docs/superpowers/plans/: 2026-06-11-ai-material-library.md  2026-06-11-lightbox-system.md  2026-06-12-ui-improvement.md  2026-06-12-visual-polish.md  2026-06-13-visual-fix.md
docs/superpowers/specs/: 2026-06-11-lightbox-system.md  2026-06-12-visual-polish.md  2026-06-13-visual-fix.md
resources/: resources.qrc
resources/styles/: main.qss
src/: main.cpp
src/core/: IDatabaseManager.h  IImageCache.cpp  IImageCache.h  IParser.h  ImageFormats.h  ParserRegistry.cpp  ParserRegistry.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Asset.h  Metadata.h  Tag.h
src/parsers/: DALLEParser.cpp  DALLEParser.h  MJParser.cpp  MJParser.h  MetadataParser.cpp  MetadataParser.h  SDParser.cpp  SDParser.h
src/services/: FileScanner.cpp  FileScanner.h  FileWatcher.cpp  FileWatcher.h  ImageCache.cpp  ImageCache.h  LibraryController.cpp  LibraryController.h
src/ui/: ActivityBar.cpp  ActivityBar.h  Codicon.h  ColorConstants.h  CommandPalette.cpp  CommandPalette.h  CustomStyle.cpp  CustomStyle.h  DetailPanel.cpp  DetailPanel.h  GalleryWidget.cpp  GalleryWidget.h  LightboxWidget.cpp  LightboxWidget.h  MainWindow.cpp  MainWindow.h  SearchBar.cpp  SearchBar.h  SidebarWidget.cpp  SidebarWidget.h  TabBar.cpp  TabBar.h  TagPickerDialog.cpp  TagPickerDialog.h  TitleBar.cpp  TitleBar.h  ToastNotification.cpp  ToastNotification.h  UIUtils.h  VisualConstants.h
tests/: tst_database.cpp  tst_filestorage.cpp  tst_models.cpp  tst_parsers.cpp
